2004-10-17  Roland Illig  <roland.illig@gmx.de>

	* extfs/hp48.in: Fix quoting issues.

	From Leonard den Ottolander.

2004-10-17  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* undelfs.c (undelfs_open): Use g_try_malloc() instead
	of g_malloc().

	* smbfs.c (smbfs_send): Don't account negative "ret".

2004-10-16  Roland Illig  <roland.illig@gmx.de>

	* tar.c (tar_read_header): Fixed handling of filenames starting
	with "./".

2004-10-06  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* cpio.c (cpio_find_head): Check mc_read() return value.
	(cpio_read_crc_head): Handle mc_read() return value properly.
	(cpio_read_oldc_head): Use union for "st" and "buf".
	(cpio_read_crc_head): Likewise.

2004-10-06  Alexander Savelyev  <i@fano.com.ua>

	* xdirentry.h (linear_start): Use off_t for offset.
	* ftpfs.c (ftpfs_linear_start): Likewise.
	* fish.c (fish_linear_start): Likewise.

2004-10-05  Miroslav Rudisin  <miero+gnu@atrey.karlin.mff.cuni.cz>

	* utilvfs.c(vfs_split_url): Add support for '@' in username.

2004-09-27  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* smbfs.c (smbfs_forget): Check smbfs_connections[i].cli
	to avoid possible segmentation fault.  Close
	https://savannah.gnu.org/bugs/index.php?func=detailitem&item_id=8974

2004-09-26  Roland Illig  <roland.illig@gmx.de>

	* vfs.c (_vfs_get_class): Revert my last patch because
	Leonard reported it to make mc crash.

2004-09-25  Roland Illig  <roland.illig@gmx.de>

	* ftpfs.c (ftpfs_find_machine): Added const qualifier.
	* mcserv.c (do_auth): Likewise.
	* utilvfs.c (is_month): Likewise. (is_time): Likewise.
	(is_week): Likewise.
	* vfs.c (_vfs_get_class): Added const qualifier.
	(vfs_prefix_to_class): Added a string length parameter to
	reduce the use of g_strdup. (vfs_split): Changes due to the
	new string length parameter.

2004-09-25  Pavel S. Shirshov  <pavelsh@mail.ru>

	* direntry.c (vfs_s_free_entry): g_free handles NULL argument too, 
	no need for the comparison.
	* extfs.c (extfs_free_archive): Likewise.